Modification de la configuration API : remplacement de OPENAPI_FILE par OPENAPI_URL dans .env et env.example. Suppression de config.env et ajout de la gestion de la pagination dans main.py pour limiter la taille des pages à 25 éléments. Suppression de openapi.json et nettoyage du .gitignore pour inclure .env.

--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ MCP_SSE_PATH=/sse
 
 # --- API Configuration ---
 # The name of the OpenAPI specification file.
-OPENAPI_FILE=openapi.json
+OPENAPI_URL=https://api.data.inclusion.beta.gouv.fr/api/openapi.json
 # The name for the MCP server.
 MCP_SERVER_NAME=DataInclusionAPI
 # API key for the data.inclusion API.
