--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ MCP_SSE_PATH=/sse
 
 # --- API Configuration ---
 # The name of the OpenAPI specification file.
-OPENAPI_FILE=openapi.json
+OPENAPI_URL=https://api.data.inclusion.beta.gouv.fr/api/openapi.json
 # The name for the MCP server.
 MCP_SERVER_NAME=DataInclusionAPI
 # API key for the data.inclusion API.
