Update Dockerfile, README.md, and main.py to change transport method from SSE to HTTP, update API path, and enhance logging functionality. Remove env.example file and add new dependencies in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,11 @@ authors = [
 dependencies = [
     "fastmcp",
     "httpx",
-    "python-dotenv"
+    "python-dotenv",
+    "langgraph",
+    "langchain",
+    "langchain-anthropic",
+    "pydantic-settings"
 ]
 
 [project.urls]
