--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 # --- Server Configuration ---
-# The transport for the MCP server. Use 'sse' for a web server or 'stdio'.
-# This script currently runs SSE by default.
-TRANSPORT=sse
+# The transport for the MCP server. Use 'http' for a web server or 'stdio'.
+# This script currently runs HTTP by default.
+TRANSPORT=http
 MCP_HOST=0.0.0.0
 MCP_PORT=8000
-MCP_SSE_PATH=/sse
+MCP_API_PATH=/mcp
+# Secret key for signing Bearer tokens. If not set, server runs without authentication.
+MCP_SERVER_SECRET_KEY=
 
 # --- API Configuration ---
 # The name of the OpenAPI specification file.
