Mise à jour de la configuration du serveur MCP : changement de MCP_HOST et MCP_PORT dans .env.example pour 127.0.0.1:8001. Suppression de fichiers de configuration obsolètes (config.py, logging_config.py, main.py, middleware.py, utils.py) et réorganisation des composants dans src. Ajout d'un nouveau fichier main.py pour le point d'entrée principal du serveur. Mise à jour des dépendances dans pyproject.toml pour utiliser pydantic-ai-slim.

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,8 @@
 # The transport for the MCP server. Use 'http' for a web server or 'stdio'.
 # This script currently runs HTTP by default.
 TRANSPORT=http
-MCP_HOST=0.0.0.0
-MCP_PORT=8000
+MCP_HOST=127.0.0.1
+MCP_PORT=8001
 MCP_API_PATH=/mcp
 # Secret key for signing Bearer tokens. If not set, server runs without authentication.
 MCP_SERVER_SECRET_KEY=
@@ -14,4 +14,5 @@ OPENAPI_URL=https://api.data.inclusion.beta.gouv.fr/api/openapi.json
 # The name for the MCP server.
 MCP_SERVER_NAME=DataInclusionAPI
 # API key for the data.inclusion API.
-DATA_INCLUSION_API_KEY= 
+DATA_INCLUSION_API_KEY=
+GEMINI_API_KEY=
