Suppression du fichier AGENT_TROUBLESHOOTING.md et du fichier repomix-output.xml. Mise à jour du Dockerfile pour copier main.py et ajuster la commande CMD. Modification de main.py pour lancer le serveur d'agent web avec Uvicorn. Mise à jour de la configuration dans config.py pour utiliser le nom du service Docker pour MCP_SERVER_URL et ajout d'AGENT_PORT.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "httpx",
     "python-dotenv",
     "pydantic-ai-slim[mcp,google,openai,cli]",
-    "pydantic-settings"
+    "pydantic-settings",
+    "fasta2a"
 ]
 
 [project.urls]
