Ajout de nouvelles variables d'environnement dans .env.example pour la configuration de Logfire et des paramètres de connexion MCP. Mise à jour de pyproject.toml pour inclure Logfire dans les dépendances. Modification de l'agent pour utiliser le nom du modèle depuis les paramètres. Amélioration de la configuration dans config.py pour gérer les retries et les délais de connexion.

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ MCP_SERVER_NAME=DataInclusionAPI
 # API key for the data.inclusion API.
 DATA_INCLUSION_API_KEY=
 GEMINI_API_KEY=
+LOGFIRE_TOKEN=
+AGENT_MCP_CONNECTION_MAX_RETRIES=15
+AGENT_MCP_CONNECTION_BASE_DELAY=0.5
+AGENT_MCP_CONNECTION_BACKOFF_MULTIPLIER=1.5
+AGENT_MODEL_NAME=gpt-4.1
