--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
     "fastmcp",
     "httpx",
     "python-dotenv",
-    "pydantic-ai-slim[mcp,google,openai,cli]",
+    "pydantic-ai-slim[mcp,google,openai,cli,logfire]",
     "pydantic-settings",
     "fasta2a"
 ]
