Ajout de la configuration Redis dans .env.example et docker-compose.yml. Mise à jour de pyproject.toml pour inclure la dépendance Redis. Intégration de la gestion de Redis dans config.py et server.py, avec des composants robustes et un système de vérification de connexion.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,22 @@ services:
     depends_on:
       mcp_server:
         condition: service_healthy
+      redis:
+        condition: service_healthy
+
+  # Service 3 : Serveur Redis pour le broker et stockage persistant
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379" # Mappe le port 6379 de l'hôte au conteneur
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    networks:
+      - app-network
 
 networks:
   app-network:
