--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "python-dotenv",
     "pydantic-ai-slim[mcp,google,openai,cli,logfire]",
     "pydantic-settings",
-    "fasta2a"
+    "fasta2a",
+    "redis[hiredis]"
 ]
 
 [project.urls]
