--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
     "pydantic-ai-slim[mcp,google,openai,cli,logfire]",
     "pydantic-settings",
     "fastapi",
-    "uvicorn"
+    "uvicorn",
+    "gradio",
+    "gradio[oauth]"
 ]
 
 [project.urls]
