--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ OPENAPI_URL=https://api.data.inclusion.beta.gouv.fr/api/openapi.json
 MCP_SERVER_NAME=DataInclusionAPI
 # API key for the data.inclusion API.
 DATA_INCLUSION_API_KEY=
+# Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
+OPENAI_API_BASE_URL=
 GEMINI_API_KEY=
 LOGFIRE_TOKEN=
 AGENT_MCP_CONNECTION_MAX_RETRIES=15
