Mise à jour de l'application pour remplacer Gradio par Chainlit. Modifications dans `Dockerfile` pour configurer le `PYTHONPATH`. Changement des références de Gradio à Chainlit dans `main.py`, `history.py`, et `factory.py`. Suppression du module `agent_streaming.py` et refactorisation des composants pour s'adapter à Chainlit. Amélioration de la gestion de l'historique des messages et des appels d'outils.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ dependencies = [
     "pydantic-settings",
     "fastapi",
     "uvicorn",
-    "gradio",
-    "gradio[oauth]",
+    "chainlit",
     "ruff",
     "pylint"
 ]
