Ajout de la configuration de la base de données PostgreSQL dans `.env.example` et `docker-compose.yml`. Mise à jour des chemins d'URL pour le serveur MCP. Intégration de l'initialisation de la base de données dans `lifespan.py`. Refactorisation de `chat.py` pour inclure une fonction d'authentification par mot de passe. Ajout de dépendances pour `asyncpg`, `SQLAlchemy`, `greenlet`, et `aiohttp` dans `pyproject.toml`. Nettoyage de `streaming.py` pour améliorer la gestion des messages et du streaming. Suppression de `settings.local.json`.

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,14 @@ AGENT_MCP_CONNECTION_MAX_RETRIES=15
 AGENT_MCP_CONNECTION_BASE_DELAY=0.5
 AGENT_MCP_CONNECTION_BACKOFF_MULTIPLIER=1.5
 AGENT_MODEL_NAME=gpt-4.1
+
+# --- Database Configuration ---
+# Configuration PostgreSQL pour le développement
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=datainclusion
+
+# URL de connexion à la base de données pour le développement local (hors Docker)
+# Cette valeur est surchargée par docker-compose.yml pour pointer vers le service 'postgres'
+DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/datainclusion
+CHAINLIT_AUTH_SECRET="?w5u?nVnQL::nQs8Oeo*iM/gzk~/0U=FUe:oKiulAAF$1kN-4$9hC5Fboc9r/920"
