Ajout de la configuration AWS pour Localstack dans `docker-compose.yml` et mise à jour des variables d'environnement dans `.env.example`. Intégration de `boto3` comme dépendance dans `pyproject.toml`. Mise à jour de `config.py` pour inclure les paramètres S3 et ajustement de `data_layer.py` pour utiliser `S3StorageClient` en fonction de l'environnement de développement.

--- a/.env.example
+++ b/.env.example
@@ -35,3 +35,10 @@ POSTGRES_DB=datainclusion
 # Cette valeur est surchargée par docker-compose.yml pour pointer vers le service 'postgres'
 DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/datainclusion
 CHAINLIT_AUTH_SECRET="?w5u?nVnQL::nQs8Oeo*iM/gzk~/0U=FUe:oKiulAAF$1kN-4$9hC5Fboc9r/920"
+
+# --- Local S3 Storage (Localstack) ---
+BUCKET_NAME=datainclusion-elements
+APP_AWS_ACCESS_KEY=test-key
+APP_AWS_SECRET_KEY=test-secret
+APP_AWS_REGION=eu-central-1
+DEV_AWS_ENDPOINT=http://localstack:4566
