nouveau profil agent travail

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 TRANSPORT=http
 MCP_HOST=0.0.0.0
 MCP_PORT=8001
-MCP_API_PATH=/mcp
+MCP_API_PATH=/mcp/
 # Secret key for signing Bearer tokens. If not set, server runs without authentication.
 MCP_SERVER_SECRET_KEY=
 
@@ -17,7 +17,6 @@ MCP_SERVER_NAME=DataInclusionAPI
 DATA_INCLUSION_API_KEY=
 # Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
 OPENAI_API_BASE_URL=
-GEMINI_API_KEY=
 LOGFIRE_TOKEN=
 AGENT_MCP_CONNECTION_MAX_RETRIES=15
 AGENT_MCP_CONNECTION_BASE_DELAY=0.5
