--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,22 @@
 # --- Server Configuration ---
-# The transport for the MCP server. Use 'http' for a web server or 'stdio'.
-# This script currently runs HTTP by default.
-TRANSPORT=http
-MCP_HOST=0.0.0.0
-MCP_PORT=8001
-MCP_API_PATH=/mcp/
-# Secret key for signing Bearer tokens. If not set, server runs without authentication.
 MCP_SERVER_SECRET_KEY=
 
-# --- API Configuration ---
-# The name of the OpenAPI specification file.
-OPENAPI_URL=https://api.data.inclusion.beta.gouv.fr/api/openapi.json
-# The name for the MCP server.
-MCP_SERVER_NAME=DataInclusionAPI
-# API key for the data.inclusion API.
-DATA_INCLUSION_API_KEY=
+# New dynamic MCP services configuration (JSON string)
+MCP_SERVICES_CONFIG='[{"name": "datainclusion", "openapi_url": "https://api.data.inclusion.beta.gouv.fr/api/openapi.json", "api_key_env_var": "DATAINCLUSION_API_KEY", "tool_mappings_file": "src/mcp_server/services/datainclusion/mappings.json"}]'
+
+
 # Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
+OPENAI_API_KEY=
 OPENAI_API_BASE_URL=
 LOGFIRE_TOKEN=
 AGENT_MCP_CONNECTION_MAX_RETRIES=15
 AGENT_MCP_CONNECTION_BASE_DELAY=0.5
 AGENT_MCP_CONNECTION_BACKOFF_MULTIPLIER=1.5
-AGENT_MODEL_NAME=gpt-4.1
+AGENT_MODEL_NAME=gpt-4.1-mini
+
+# Configuration de connexion au serveur MCP
+# Utilise le nom du service Docker pour la communication inter-conteneurs
+MCP_GATEWAY_BASE_URL=http://mcp_server:8000/mcp/
 
 # --- Database Configuration ---
 # Configuration PostgreSQL pour le développement
