correction du .env.exemple

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,8 @@ MCP_SERVER_SECRET_KEY=
 # New dynamic MCP services configuration (JSON string)
 MCP_SERVICES_CONFIG='[{"name": "datainclusion", "openapi_url": "https://api.data.inclusion.beta.gouv.fr/api/openapi.json", "api_key_env_var": "DATAINCLUSION_API_KEY", "tool_mappings_file": "src/mcp_server/services/datainclusion/mappings.json"}]'
 
+# --- Data Inclusion API Configuration ---
+DATAINCLUSION_API_KEY=
 
 # Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
 OPENAI_API_KEY=
