--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 MCP_SERVER_SECRET_KEY=
 
 # New dynamic MCP services configuration (JSON string)
-MCP_SERVICES_CONFIG='[{"name": "datainclusion", "openapi_url": "https://api.data.inclusion.beta.gouv.fr/api/openapi.json", "api_key_env_var": "DATAINCLUSION_API_KEY", "tool_mappings_file": "src/mcp_server/services/datainclusion/mappings.json"}]'
+MCP_SERVICES_CONFIG='[{"name": "datainclusion", "openapi_url": "https://api.data.inclusion.beta.gouv.fr/api/openapi.json", "api_key_env_var": "DATAINCLUSION_API_KEY", "tool_mappings_file": "src/mcp_server/services/datainclusion/mappings.json", "port": 8000}, {"name": "legifrance", "openapi_url": "https://api.piste.gouv.fr/dila/legifrance/openapi.yaml", "api_key_env_var": "LEGIFRANCE_API_KEY", "tool_mappings_file": "src/mcp_server/services/legifrance/mappings.json", "port": 8001}]'
 
 # --- Data Inclusion API Configuration ---
 DATAINCLUSION_API_KEY=
@@ -18,7 +18,7 @@ AGENT_MODEL_NAME=gpt-4.1-mini
 
 # Configuration de connexion au serveur MCP
 # Utilise le nom du service Docker pour la communication inter-conteneurs
-MCP_GATEWAY_BASE_URL=http://mcp_server:8000/mcp/
+MCP_SERVER_HOST_URL=http://mcp_server
 
 # --- Database Configuration ---
 # Configuration PostgreSQL pour le développement
