--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,36 @@
-# --- Server Configuration ---
-MCP_SERVER_SECRET_KEY=
-
 # New dynamic MCP services configuration (JSON string)
-MCP_SERVICES_CONFIG='[{"name": "datainclusion", "openapi_url": "https://api.data.inclusion.beta.gouv.fr/api/openapi.json", "api_key_env_var": "DATAINCLUSION_API_KEY", "tool_mappings_file": "src/mcp_server/services/datainclusion/mappings.json", "port": 8000}, {"name": "legifrance", "openapi_url": "https://api.piste.gouv.fr/dila/legifrance/openapi.yaml", "api_key_env_var": "LEGIFRANCE_API_KEY", "tool_mappings_file": "src/mcp_server/services/legifrance/mappings.json", "port": 8001}]'
+MCP_SERVICES_CONFIG='[
+  {
+    "name": "datainclusion",
+    "openapi_path_or_url": "src/mcp_server/services/datainclusion/openapi.json",
+    "auth": {
+      "method": "bearer",
+      "api_key_env_var": "DATAINCLUSION_API_KEY"
+    },
+    "tool_mappings_file": "src/mcp_server/services/datainclusion/mappings.json",
+    "port": 8000
+  },
+  {
+    "name": "legifrance",
+    "openapi_path_or_url": "src/mcp_server/services/legifrance/openapi.json",
+    "auth": {
+      "method": "oauth2_client_credentials",
+      "token_url": "https://sandbox-oauth.piste.gouv.fr/api/oauth/token",
+      "client_id_env_var": "LEGIFRANCE_OAUTH_CLIENT_ID",
+      "client_secret_env_var": "LEGIFRANCE_OAUTH_CLIENT_SECRET",
+      "scope": "openid"
+    },
+    "tool_mappings_file": "src/mcp_server/services/legifrance/mappings.json",
+    "port": 8002
+  }
+]'
 
 # --- Data Inclusion API Configuration ---
 DATAINCLUSION_API_KEY=
+
+# --- Legifrance API Configuration ---
+LEGIFRANCE_OAUTH_CLIENT_ID="VOTRE_CLIENT_ID_PISTE"
+LEGIFRANCE_OAUTH_CLIENT_SECRET="VOTRE_SECRET_PISTE"
 
 # Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
 OPENAI_API_KEY=
