Renommage des outils de Datainclusion

--- a/src/mcp_server/services/datainclusion/mappings.json
+++ b/src/mcp_server/services/datainclusion/mappings.json
@@ -1,17 +1,16 @@
 {
-    "list_structures_endpoint_api_v0_structures_get": "list_all_structures",
-    "retrieve_structure_endpoint_api_v0_structures__source___id__get": "get_structure_details",
-    "list_sources_endpoint_api_v0_sources_get": "list_all_sources",
-    "list_services_endpoint_api_v0_services_get": "list_all_services",
-    "retrieve_service_endpoint_api_v0_services__source___id__get": "get_service_details",
-    "search_services_endpoint_api_v0_search_services_get": "search_services",
-    "as_dict_list_api_v0_doc_labels_nationaux_get": "doc_list_labels_nationaux",
-    "as_dict_list_api_v0_doc_thematiques_get": "doc_list_thematiques",
-    "as_dict_list_api_v0_doc_typologies_services_get": "doc_list_typologies_services",
-    "as_dict_list_api_v0_doc_frais_get": "doc_list_frais",
-    "as_dict_list_api_v0_doc_profils_get": "doc_list_profils_publics",
-    "as_dict_list_api_v0_doc_typologies_structures_get": "doc_list_typologies_structures",
-    "as_dict_list_api_v0_doc_modes_accueil_get": "doc_list_modes_accueil",
-    "as_dict_list_api_v0_doc_modes_orientation_accompagnateur_get": "doc_modes_orient_accomp",
-    "as_dict_list_api_v0_doc_modes_orientation_beneficiaire_get": "doc_modes_orient_benef"
+    "list_structures_endpoint_api_v1_structures_get": "list_all_structures",
+    "retrieve_structure_endpoint_api_v1_structures__source___id__get": "get_structure_details",
+    "list_sources_endpoint_api_v1_sources_get": "list_all_sources",
+    "list_services_endpoint_api_v1_services_get": "list_all_services",
+    "retrieve_service_endpoint_api_v1_services__source___id__get": "get_service_details",
+    "search_services_endpoint_api_v1_search_services_get": "search_services",
+    "as_dict_list_api_v1_doc_frais_get": "doc_list_frais",
+    "as_dict_list_api_v1_doc_modes_accueil_get": "doc_list_modes_accueil",
+    "as_dict_list_api_v1_doc_modes_mobilisation_get": "doc_list_modes_mobilisation",
+    "as_dict_list_api_v1_doc_personnes_mobilisatrice_get": "doc_list_personnes_mobilisatrice",
+    "as_dict_list_api_v1_doc_publics_get": "doc_list_publics",
+    "as_dict_list_api_v1_doc_reseaux_porteurs_get": "doc_list_reseaux_porteurs",
+    "as_dict_list_api_v1_doc_thematiques_get": "doc_list_thematiques",
+    "as_dict_list_api_v1_doc_types_services_get": "doc_list_types_services"
 } 
