--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,16 @@ MCP_SERVICES_CONFIG='[
     },
     "tool_mappings_file": "src/mcp_server/services/legifrance/mappings.json",
     "port": 8002
+  },
+  {
+    "name": "insee",
+    "openapi_path_or_url": "src/mcp_server/services/insee/openapi.json",
+    "auth": {
+      "method": "bearer",
+      "api_key_env_var": "INSEE_API_KEY"
+    },
+    "tool_mappings_file": "src/mcp_server/services/insee/mappings.json",
+    "port": 8003
   }
 ]'
 
@@ -31,6 +41,9 @@ DATAINCLUSION_API_KEY=
 # --- Legifrance API Configuration ---
 LEGIFRANCE_OAUTH_CLIENT_ID="VOTRE_CLIENT_ID_PISTE"
 LEGIFRANCE_OAUTH_CLIENT_SECRET="VOTRE_SECRET_PISTE"
+
+# --- Insee API Configuration ---
+INSEE_API_KEY=
 
 # Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
 OPENAI_API_KEY=
