--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,10 +20,11 @@ services:
     ports:
       - "8000:8000"  # Port pour DataInclusion
       - "8002:8002"  # Port pour Legifrance
+      - "8003:8003"  # Port pour Insee
     restart: unless-stopped
     healthcheck:
       # Vérifie que le serveur MCP est bien démarré et répond
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health && curl -f http://localhost:8002/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health && curl -f http://localhost:8002/health && curl -f http://localhost:8003/health"]
       interval: 30s
       timeout: 10s
       retries: 5
