--- a/.env.example
+++ b/.env.example
@@ -54,6 +54,11 @@ AGENT_MCP_CONNECTION_BASE_DELAY=0.5
 AGENT_MCP_CONNECTION_BACKOFF_MULTIPLIER=1.5
 AGENT_MODEL_NAME=gpt-4.1-mini
 
+# --- Langfuse Tracing ---
+LANGFUSE_PUBLIC_KEY=
+LANGFUSE_SECRET_KEY=
+LANGFUSE_HOST="https://cloud.langfuse.com"
+
 # Configuration de connexion au serveur MCP
 # Utilise le nom du service Docker pour la communication inter-conteneurs
 MCP_SERVER_HOST_URL=http://mcp_server
