--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # --- Service 1: Le serveur MCP ---
   # Ce service exécute le serveur FastMCP qui transforme l'API data.inclusion en outils.
   mcp_server:
-    container_name: datainclusion-mcp-server
+    container_name: france-gpt-mcp-server
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,17 +14,17 @@ services:
       - .env
     environment:
       # S'assure que le serveur écoute sur le bon port à l'intérieur du conteneur
-      - MCP_PORT=8000
+      - MCP_PORT=8001
     networks:
-      - datainclusion-net
+      - france-gpt-net
     ports:
-      - "8000:8000"  # Port pour DataInclusion
+      - "8001:8001"  # Port pour DataInclusion
       - "8002:8002"  # Port pour Legifrance
       - "8003:8003"  # Port pour Insee
     restart: unless-stopped
     healthcheck:
       # Vérifie que le serveur MCP est bien démarré et répond
-      test: ["CMD-SHELL", "curl -f http://localhost:8000/health && curl -f http://localhost:8002/health && curl -f http://localhost:8003/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8001/health && curl -f http://localhost:8002/health && curl -f http://localhost:8003/health"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -33,7 +33,7 @@ services:
   # --- Service 2: L'Agent IA et l'interface Chainlit/FastAPI ---
   # C'est le service principal, qui fournit l'interface utilisateur et l'API de chat.
   agent:
-    container_name: datainclusion-agent-ui
+    container_name: france-gpt-agent-ui
     build:
       context: .
       dockerfile: Dockerfile
@@ -42,11 +42,11 @@ services:
       - .env
     environment:
       # Port sur lequel l'interface Chainlit et l'API de l'agent seront accessibles
-      - AGENT_PORT=8001
+      - AGENT_PORT=8000
       # URL pour que l'agent puisse trouver le serveur MCP. 'mcp_server' est le nom du service.
       - MCP_SERVER_HOST_URL=http://mcp_server
       # URL de connexion à la base de données PostgreSQL
-      - DATABASE_URL=postgresql+asyncpg://user:password@postgres:5432/datainclusion
+      - DATABASE_URL=postgresql+asyncpg://user:password@postgres:5432/france-gpt
       # Mode de fonctionnement pour la journalisation et les configurations
       - ENVIRONMENT=production
       # Secret JWT pour l'authentification Chainlit (requis quand l'authentification est activée)
@@ -57,10 +57,10 @@ services:
       - AWS_DEFAULT_REGION=${APP_AWS_REGION}
       - AWS_ENDPOINT_URL=${DEV_AWS_ENDPOINT}
     networks:
-      - datainclusion-net
+      - france-gpt-net
     ports:
-      # Expose le port 8001 pour accéder à l'interface Chainlit via http://localhost:8001
-      - "8001:8001"
+      # Expose le port 8000  pour accéder à l'interface Chainlit via http://localhost:8000
+      - "8000:8000"
     # S'assure que le serveur MCP et la base de données sont démarrés et sains avant de lancer l'agent
     depends_on:
       mcp_server:
@@ -72,7 +72,7 @@ services:
     restart: unless-stopped
     healthcheck:
       # Vérifie que l'interface Chainlit/FastAPI est bien démarrée
-      test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -82,24 +82,24 @@ services:
   # Ce service héberge la base de données pour la persistance des conversations et utilisateurs.
   postgres:
     image: postgres:15-alpine
-    container_name: datainclusion-postgres-db
+    container_name: france-gpt-postgres-db
     environment:
       # Configuration de la base de données PostgreSQL pour le développement
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=datainclusion
+      - POSTGRES_DB=france-gpt
     volumes:
       # Persistance des données de la base de données sur un volume Docker
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - datainclusion-net
+      - france-gpt-net
     ports:
       # Expose le port PostgreSQL pour connexion locale si nécessaire
       - "5432:5432"
     restart: unless-stopped
     healthcheck:
       # Vérifie que PostgreSQL est prêt à accepter des connexions
-      test: ["CMD-SHELL", "pg_isready -U user -d datainclusion"]
+      test: ["CMD-SHELL", "pg_isready -U user -d france-gpt"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -109,7 +109,7 @@ services:
   # Ce service simule les services AWS S3 localement pour le développement et les tests.
   localstack:
     image: localstack/localstack:latest
-    container_name: datainclusion-localstack
+    container_name: france-gpt-localstack
     ports:
       - "4566:4566"
     environment:
@@ -119,7 +119,7 @@ services:
       - ./localstack-script.sh:/etc/localstack/init/ready.d/script.sh
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
-      - datainclusion-net
+      - france-gpt-net
     healthcheck:
       test: ["CMD", "awslocal", "s3", "ls"]
       interval: 10s
@@ -135,5 +135,5 @@ volumes:
 
 # Définition du réseau partagé pour permettre la communication entre les conteneurs
 networks:
-  datainclusion-net:
+  france-gpt-net:
     driver: bridge
