--- a/.env.example
+++ b/.env.example
@@ -12,15 +12,6 @@ MCP_SERVICES_CONFIG='[
   },
   {
     "name": "legifrance",
-    "openapi_path_or_url": "src/mcp_server/services/legifrance/openapi.json",
-    "auth": {
-      "method": "oauth2_client_credentials",
-      "token_url": "https://sandbox-oauth.piste.gouv.fr/api/oauth/token",
-      "client_id_env_var": "LEGIFRANCE_OAUTH_CLIENT_ID",
-      "client_secret_env_var": "LEGIFRANCE_OAUTH_CLIENT_SECRET",
-      "scope": "openid"
-    },
-    "tool_mappings_file": "src/mcp_server/services/legifrance/mappings.json",
     "port": 8002
   },
   {
@@ -39,8 +30,8 @@ MCP_SERVICES_CONFIG='[
 DATAINCLUSION_API_KEY=
 
 # --- Legifrance API Configuration ---
-LEGIFRANCE_OAUTH_CLIENT_ID="VOTRE_CLIENT_ID_PISTE"
-LEGIFRANCE_OAUTH_CLIENT_SECRET="VOTRE_SECRET_PISTE"
+LEGIFRANCE_CLIENT_ID="VOTRE_CLIENT_ID_PISTE"
+LEGIFRANCE_CLIENT_SECRET="VOTRE_SECRET_PISTE"
 
 # --- Insee API Configuration ---
 INSEE_API_KEY=
