Ajout du service INSEE pour interagir avec les API via la bibliothèque pynsee. Suppression de la configuration obsolète dans `.env.example` et mise à jour des dépendances dans `pyproject.toml`. Intégration du service dans le serveur MCP avec des outils pour la recherche de données macroéconomiques, géographiques et locales.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "greenlet",
     "aiohttp",
     "boto3",
-    "pylegifrance"
+    "pylegifrance",
+    "pynsee[full]"
 ]
 
 [project.optional-dependencies]
