Ajout du service La Bonne Alternance avec intégration des schémas de données et des outils pour la recherche d'offres d'emploi et de formations. Mise à jour de la configuration dans .env.example et docker-compose.yml pour refléter les changements. Suppression des fichiers obsolètes liés à l'API Insee.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,12 @@ services:
     networks:
       - france-gpt-net
     ports:
-      - "8001:8001"  # Port pour DataInclusion
-      - "8002:8002"  # Port pour Legifrance
-      - "8003:8003"  # Port pour Insee
+      - "8001:8001"  # Port for DataInclusion
+      - "8002:8002"  # Port for Legifrance
+      - "8003:8003"  # Port for La Bonne Alternance
     restart: unless-stopped
     healthcheck:
-      # Vérifie que le serveur MCP est bien démarré et répond
+      # Checks that the MCP server is up and responding
       test: ["CMD-SHELL", "curl -f http://localhost:8001/health && curl -f http://localhost:8002/health && curl -f http://localhost:8003/health"]
       interval: 30s
       timeout: 10s
