--- a/.env.example
+++ b/.env.example
@@ -13,13 +13,11 @@ MCP_SERVICES_CONFIG='[
     "port": 8002
   },
   {
-    "name": "insee",
-    "openapi_path_or_url": "src/mcp_server/services/insee/openapi.json",
+    "name": "labonnealternance",
     "auth": {
       "method": "bearer",
-      "api_key_env_var": "INSEE_API_KEY"
+      "api_key_env_var": "LABONNEALTERNANCE_API_KEY"
     },
-    "tool_mappings_file": "src/mcp_server/services/insee/mappings.json",
     "port": 8003
   }
 ]'
@@ -31,8 +29,8 @@ DATAINCLUSION_API_KEY=
 LEGIFRANCE_CLIENT_ID="VOTRE_CLIENT_ID_PISTE"
 LEGIFRANCE_CLIENT_SECRET="VOTRE_SECRET_PISTE"
 
-# --- Insee API Configuration ---
-INSEE_API_KEY=
+# --- La Bonne Alternance API Configuration ---
+LABONNEALTERNANCE_API_KEY=
 
 # Optionnel: URL de base pour les API compatibles OpenAI. Laisser vide pour utiliser l'API OpenAI par défaut.
 OPENAI_API_KEY=
