Ajout de nouvelles dépendances pour le développement : `pytest` et `pytest-asyncio` ont été intégrés à la configuration dans `pyproject.toml` pour améliorer les tests unitaires et asynchrones.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "ruff",
-    "pylint"
+    "pylint",
+    "pytest",
+    "pytest-asyncio"
 ]
 
 [project.urls]
