--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,7 +30,7 @@ jobs:
           ${{ runner.os }}-uv-
 
     - name: Install dependencies
-      run: uv pip install -r pyproject.toml --extra dev
+      run: uv pip install --system -r pyproject.toml --extra dev
 
     - name: Lint with ruff
       run: |
