style: format and lint codebase with pre-commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ dev = [
     "ruff",
     "pylint",
     "pytest",
-    "pytest-asyncio"
+    "pytest-asyncio",
+    "pre-commit"
 ]
 
 [project.urls]
