Update dependencies in `pyproject.toml` to specify `httpx` version, enhance configuration in `.chainlit/config.toml` with user session settings and features, and refactor test fixtures in `test_app.py` for improved clarity and isolation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
 ]
 dependencies = [
     "fastmcp",
-    "httpx",
+    "httpx>=0.28.1",
     "python-dotenv",
     "pydantic-ai-slim[mcp,openai,cli,logfire]",
     "pydantic-settings",
