Enhance S3 integration by adding centralized S3 client management and bucket existence checks. Update environment configuration for Google OAuth and improve file upload handling in the UI. Refactor service functions to support job applications with CV uploads, ensuring proper data handling and error management. Update tests to cover new functionalities and ensure robust validation of S3 interactions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,7 +117,7 @@ services:
       - SERVICES=s3
       - AWS_DEFAULT_REGION=eu-central-1 # Optionnel: Définir la région par défaut si nécessaire
     volumes:
-      - ./localstack-script.sh:/etc/localstack/init/ready.d/script.sh
+      - ./localstack-script.sh:/docker-entrypoint-initaws.d/init-s3.sh
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - france-gpt-net
