--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+CHAINLIT_URL=http://localhost:8000
+
 # New dynamic MCP services configuration (JSON string)
 MCP_SERVICES_CONFIG='[
   {
@@ -63,3 +65,7 @@ APP_AWS_ACCESS_KEY=test-key
 APP_AWS_SECRET_KEY=test-secret
 APP_AWS_REGION=eu-central-1
 DEV_AWS_ENDPOINT=http://localstack:4566
+
+# --- Google OAuth Configuration ---
+OAUTH_GOOGLE_CLIENT_ID=
+OAUTH_GOOGLE_CLIENT_SECRET=
