Update MCP services configuration in `.env.example` to include new programmatic tools and base URLs. Refactor `pyproject.toml` to replace `PyPDF2` with `pypdf`. Enhance MCP service factory to support dynamic tool creation from programmatic modules. Remove deprecated service initialization code and improve error handling in service functions. Update tests to reflect changes in service structure and ensure robust functionality across MCP services.

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,12 @@
 CHAINLIT_URL=http://localhost:8000
 
 # New dynamic MCP services configuration (JSON string)
-MCP_SERVICES_CONFIG='[
+MCP_SERVICES_CONFIG=
+'[
   {
     "name": "datainclusion",
+    "programmatic_tools_module": "src.mcp_server.services.datainclusion.service",
+    "base_url": "https://api.inclusion.beta.gouv.fr",
     "auth": {
       "method": "bearer",
       "api_key_env_var": "DATAINCLUSION_API_KEY"
@@ -12,10 +15,13 @@ MCP_SERVICES_CONFIG='[
   },
   {
     "name": "legifrance",
+    "programmatic_tools_module": "src.mcp_server.services.legifrance.service",
     "port": 8002
   },
   {
     "name": "labonnealternance",
+    "programmatic_tools_module": "src.mcp_server.services.labonnealternance.service",
+    "base_url": "https://labonnealternance.apprentissage.beta.gouv.fr/api",
     "auth": {
       "method": "bearer",
       "api_key_env_var": "LABONNEALTERNANCE_API_KEY"
